correcoes no mapstruct do usuario